--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
     <version>2.3.0</version>
   </parent>
 
-    <groupId>org.fenixedu</groupId>
-    <artifactId>fenixedu-bpi</artifactId>
+    <groupId>pt.ist</groupId>
+    <artifactId>fenixedu-ist-bpi</artifactId>
     <version>1.0.0</version>
-  <packaging>jar</packaging>
+    <packaging>jar</packaging>
 
   <name>BPI Integration</name>
 
@@ -67,34 +67,6 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.8</version>
-        <executions>
-          <execution>
-            <id>initialize</id>
-            <phase>initialize</phase>
-            <configuration>
-              <target>
-                <property name="basedir" refid="maven.project" />
-
-                <echo
-                  message="ANTRUN: copy resources and convert to UTF-8 to webapp/WEB-INF/resources" />
-
-                <copy todir="${basedir}/src/main/webapp/WEB-INF/resources"
-                  encoding="ISO-8859-15" outputencoding="UTF-8" overwrite="true">
-                  <fileset dir="${basedir}/src/main/resources/resources/" />
-                </copy>
-              </target>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
