--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>pt.ist</groupId>
     <artifactId>fenixedu-ist-bpi</artifactId>
-    <version>DEV-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
   <name>BPI Integration</name>
