Integrated actual registration declaration file; Added converter to tiff service

--- a/pom.xml
+++ b/pom.xml
@@ -1,111 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.fenixedu</groupId>
-    <artifactId>fenix-framework-project</artifactId>
-    <version>2.3.0</version>
-  </parent>
+	<parent>
+		<groupId>org.fenixedu</groupId>
+		<artifactId>fenix-framework-project</artifactId>
+		<version>2.3.0</version>
+	</parent>
 
-    <groupId>pt.ist</groupId>
-    <artifactId>fenixedu-ist-bpi</artifactId>
-    <version>DEV-SNAPSHOT</version>
-    <packaging>jar</packaging>
+	<groupId>pt.ist</groupId>
+	<artifactId>fenixedu-ist-bpi</artifactId>
+	<version>1.1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>BPI Integration</name>
+	<name>BPI Integration</name>
 
-  <properties>
-    <version.org.fenixedu.bennu>3.4.1</version.org.fenixedu.bennu>
-    <version.org.fenixedu.academic>5.3.0</version.org.fenixedu.academic>
-    <version.pt.ist.fenixedu.ist>7.6.0</version.pt.ist.fenixedu.ist>
-    <version.org.fenixedu.bennu.spring>1.2.0</version.org.fenixedu.bennu.spring>
-    <version.com.qubit.solution.fenixedu.bennu-webservices-core>1.0.0.CONTRIB</version.com.qubit.solution.fenixedu.bennu-webservices-core>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.fenixedu</groupId>
-      <artifactId>bennu-core</artifactId>
-      <version>${version.org.fenixedu.bennu}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.qubit.solution.fenixedu</groupId>
-      <artifactId>bennu-webservices-core</artifactId>
-      <version>${version.com.qubit.solution.fenixedu.bennu-webservices-core}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.fenixedu</groupId>
-      <artifactId>fenixedu-academic</artifactId>
-      <version>${version.org.fenixedu.academic}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.fenixedu</groupId>
-      <artifactId>bennu-spring</artifactId>
-      <version>${version.org.fenixedu.bennu.spring}</version>
-    </dependency>
-    <dependency>
-      <groupId>pt.ist</groupId>
-      <artifactId>fenixedu-ist-integration</artifactId>
-      <version>${version.pt.ist.fenixedu.ist}</version>
-    </dependency>
-  </dependencies>
+	<properties>
+		<version.org.fenixedu.bennu>3.4.1</version.org.fenixedu.bennu>
+		<version.org.fenixedu.academic>5.3.0</version.org.fenixedu.academic>
+		<version.pt.ist.fenixedu.ist>8.1.0</version.pt.ist.fenixedu.ist>
+		<version.org.fenixedu.bennu.spring>1.2.0</version.org.fenixedu.bennu.spring>
+		<version.com.qubit.solution.fenixedu.bennu-webservices-core>1.0.0.CONTRIB</version.com.qubit.solution.fenixedu.bennu-webservices-core>
+		<version.org.glassfish.jersey>2.17</version.org.glassfish.jersey>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.fenixedu</groupId>
+			<artifactId>bennu-core</artifactId>
+			<version>${version.org.fenixedu.bennu}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.qubit.solution.fenixedu</groupId>
+			<artifactId>bennu-webservices-core</artifactId>
+			<version>${version.com.qubit.solution.fenixedu.bennu-webservices-core}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fenixedu</groupId>
+			<artifactId>fenixedu-academic</artifactId>
+			<version>${version.org.fenixedu.academic}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fenixedu</groupId>
+			<artifactId>bennu-spring</artifactId>
+			<version>${version.org.fenixedu.bennu.spring}</version>
+		</dependency>
+		<dependency>
+			<groupId>pt.ist</groupId>
+			<artifactId>fenixedu-ist-integration</artifactId>
+			<version>${version.pt.ist.fenixedu.ist}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-multipart</artifactId>
+			<version>${version.org.glassfish.jersey}</version>
+		</dependency>
+	</dependencies>
 
-  <distributionManagement>
-      <repository>
-      <id>fenixedu-contrib-releases</id>
-      <url>https://repo.fenixedu.org/fenixedu-contrib-releases</url>
-    </repository>
-  </distributionManagement>
+	<distributionManagement>
+		<repository>
+			<id>fenixedu-contrib-releases</id>
+			<url>https://repo.fenixedu.org/fenixedu-contrib-releases</url>
+		</repository>
+	</distributionManagement>
 
-  <repositories>
-    <repository>
-      <id>fenixedu-maven-repository</id>
-      <url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
-    </repository>
-  </repositories>
+	<repositories>
+		<repository>
+			<id>fenixedu-maven-repository</id>
+			<url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
+		</repository>
+	</repositories>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.3</version>
-        <executions>
-          <execution>
-            <phase>validate</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
-              <silent>true</silent>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>javax.xml.bind</groupId>
-                  <artifactId>jaxb-api</artifactId>
-                  <version>2.2.12</version>
-                  <type>jar</type>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>javax.xml.ws</groupId>
-                  <artifactId>jaxws-api</artifactId>
-                  <version>2.2.11</version>
-                  <type>jar</type>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <configuration>
-              <additionalparam>-Xdoclint:none</additionalparam>
-            </configuration>
-        </plugin>
-    </plugins>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+							<silent>true</silent>
+							<artifactItems>
+								<artifactItem>
+									<groupId>javax.xml.bind</groupId>
+									<artifactId>jaxb-api</artifactId>
+									<version>2.2.12</version>
+									<type>jar</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>javax.xml.ws</groupId>
+									<artifactId>jaxws-api</artifactId>
+									<version>2.2.11</version>
+									<type>jar</type>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
+			</plugin>
+		</plugins>
 
-  </build>
+	</build>
 </project>
