--- a/ws-test/pom.xml
+++ b/ws-test/pom.xml
@@ -1,57 +1,63 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
   http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>pt.ist</groupId>
-  <artifactId>fenixedu-ist-bpi-test</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0.0-SNAPSHOT</version>
-  
-  <name>BPI Testing</name>
-  
-  <dependencies>
-  </dependencies>
-  <build>
-    <plugins>
-        <plugin>
-          <groupId>org.jvnet.jax-ws-commons</groupId>
-          <artifactId>jaxws-maven-plugin</artifactId>
-          <version>2.3</version>
-          <executions>
-            <execution>
-              <goals>
-                <goal>wsimport</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <packageName>${generate.packageName}</packageName>
-            <wsdlUrls>
-              <wsdlUrl>
-                http://localhost:8080/fenix/web-services/bpiIntegration?wsdl
-              </wsdlUrl>
-            </wsdlUrls>
-            <vmArgs>
-              <vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
-            </vmArgs>
-          </configuration>
-        </plugin>
-       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.5.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>java</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <mainClass>pt.ist.fenixedu.bpi.Test</mainClass>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>pt.ist</groupId>
+	<artifactId>fenixedu-ist-bpi-test</artifactId>
+	<packaging>jar</packaging>
+	<version>1.0.0-SNAPSHOT</version>
+
+	<name>BPI Testing</name>
+
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.jvnet.jax-ws-commons</groupId>
+				<artifactId>jaxws-maven-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>wsimport</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<packageName>${generate.packageName}</packageName>
+					<wsdlUrls>
+						<wsdlUrl>
+							http://localhost:8080/fenix/web-services/bpiIntegration?wsdl
+						</wsdlUrl>
+					</wsdlUrls>
+					<vmArgs>
+						<vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
+					</vmArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.5.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>pt.ist.fenixedu.bpi.Test</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
