--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
 
 	<name>BPI Integration</name>
 
+    <scm>
+        <connection>scm:git:https://github.com/ist-dsi/fenixedu-ist-bpi.git</connection>
+        <developerConnection>scm:git:git@github.com:ist-dsi/fenixedu-ist-bpi.git</developerConnection>
+        <url>http://fenixedu.org</url>
+        <tag>HEAD</tag>
+    </scm>
+    
 	<properties>
 		<version.org.fenixedu.bennu>3.4.1</version.org.fenixedu.bennu>
 		<version.org.fenixedu.academic>5.3.0</version.org.fenixedu.academic>
