--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,10 @@
     
 	<properties>
 		<version.com.qubit.solution.fenixedu.bennu-webservices-core>1.0.0.CONTRIB</version.com.qubit.solution.fenixedu.bennu-webservices-core>
-		<version.org.fenixedu.academic>6.0.0</version.org.fenixedu.academic>
+		<version.org.fenixedu.academic>7.4.0</version.org.fenixedu.academic>
 		<version.org.fenixedu.bennu>4.1.0</version.org.fenixedu.bennu>
 		<version.org.glassfish.jersey>2.25</version.org.glassfish.jersey>
-		<version.pt.ist.fenixedu.ist>9.0.0</version.pt.ist.fenixedu.ist>
+		<version.pt.ist.fenixedu.ist>10.2.0-SNAPSHOT</version.pt.ist.fenixedu.ist>
 	</properties>
 	<dependencies>
 		<dependency>
